# vanguard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: app.hpp  types.hpp
include/gfx/: device.hpp  render_pass.hpp  renderer.hpp  shader.hpp
shaders/: basic.hlsl  blit.hlsl
src/: app.cpp  main.cpp
src/backends/dx12/: device.cpp  device.hpp
src/gfx/: device.cpp  render_pass.cpp  renderer.cpp  shader.cpp
